[graphql] qodana warnings fixes
GitOrigin-RevId: 6c0be80ac77da7c1415d793b274371bf2f63d99a